<resources>
    <string name="app_name">JetpackDemo</string>
    <string name="home">首页</string>
    <string name="news">新闻</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="tip_input_name">请输入用户名</string>
    <string name="tip_input_name_err">用户名输入错误</string>
    <string name="tip_input_password">请输入密码</string>
    <string name="tip_input_password_err">密码错误</string>
    <string name="login">登陆</string>
</resources>
