<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
    <data>
        <variable
            name="model"
            type="com.smalllei.jetpackdemo.databindingmodel.LoginModel" />
        <variable
            name="fragment"
            type="com.smalllei.jetpackdemo.fragment.LoginFragment" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="@string/tip_input_password"
        android:hint="@string/tip_input_name"
        android:text="@{model.MName}"
        android:onTextChanged="@{(text,start,end,count) -> model.onNameChanged(text)}"
        />

    <EditText
        android:id="@+id/login_edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="@string/tip_input_password"
        android:hint="@string/tip_input_password"
        android:text="@{model.MPwd}"
        android:onTextChanged="@{model :: onPwdChanged}"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:onClick="@{() -> model.login()}"
        />
</LinearLayout>
</layout>