<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/home_fragment">
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.smalllei.jetpackdemo.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/next_action"
            app:destination="@+id/news_fragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/news_fragment"
        android:name="com.smalllei.jetpackdemo.fragment.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/news_fragment">
        <action
            android:id="@+id/next_action"
            app:destination="@+id/settings_fragment" />
    </fragment>
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.smalllei.jetpackdemo.fragment.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/settings_fragment">
        <action
            android:id="@+id/next_action"
            app:popUpTo="@+id/home_fragment" />
        <deepLink
            android:autoVerify="true"
            app:uri="jetpackdemo://fragment/SettingsFragment" />
    </fragment>
</navigation>